preloader fix on mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  min-width: 1000px;
+  min-width: 100%;
   background: -webkit-gradient(linear, left bottom, left top, from(#00d4ff), color-stop(82%, #709dca));
   background: linear-gradient(0deg, #00d4ff 0%, #709dca 82%);
   background: #709dca url(http://hello-site.ru//main/images/preloads/bars.svg) center center no-repeat;
